# workflow

./: .gitignore  CLAUDE.md  Makefile  README.md
app/connectors/: package-lock.json  package.json  tsconfig.json
app/connectors-service/: .dockerignore  .env.sample  .gitignore  Dockerfile.dev  Dockerfile.worker  Readme.md  main.py  pyproject.toml  requirements.txt
app/connectors-service/connectors/code_snippet/: connector.py  operation.py
app/connectors-service/connectors/core/: connector.py
app/connectors-service/connectors/http_request_js/: info.json
app/connectors-service/connectors/sample/: connector.py  info.json
app/connectors-service/rnd/: task_graph.py
app/connectors-service/src/: settings.py
app/connectors-service/src/api/: __init__.py  celery.py  connectors.py
app/connectors-service/src/clients/: base_client.py
app/connectors-service/src/core/: workflow.py
app/connectors-service/src/dto/: __init__.py  message_payload.py
app/connectors-service/src/grpc/connector_runtime/: connector_runtime_pb2.py  connector_runtime_pb2.pyi  connector_runtime_pb2_grpc.py
app/connectors-service/src/grpc/workflows/: workflow_pb2.py  workflow_pb2.pyi  workflow_pb2_grpc.py
app/connectors-service/src/grpc_server/: runtime_service.py
app/connectors-service/src/logger/: logging.py
app/connectors-service/src/services/: consumer.py
app/connectors-service/src/utils/: graphs.py
app/connectors-service/src/workers/: celery.py
app/frontend/: .eslintrc.json  Dockerfile.dev  (+3 more)
docker/: debug.docker-compose.yml  dev.docker-compose.yml
docs/: phase2-apis.md
(+682 files in other folders)
