[project]
name = "connectors-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anyio>=4.9.0",
    "billiard>=4.2.1",
    "celery>=5.5.3",
    "fastapi>=0.116.1",
    "kombu>=5.5.4",
    "psycopg2>=2.9.10",
    "pydantic>=2.11.7",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.41",
    "typing-extensions>=4.14.1",
    "uvicorn>=0.35.0",
    "vine>=5.1.0",
]
