[project]
name = "connectors-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aio-pika>=9.5.5",
    "anyio>=4.9.0",
    "billiard>=4.2.1",
    "celery>=5.5.3",
    "colorlog>=6.9.0",
    "fastapi>=0.116.1",
    "gevent>=25.5.1",
    "jinja2>=3.1.6",
    "kombu>=5.5.4",
    "psycopg2>=2.9.10",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.41",
    "typing-extensions>=4.14.1",
    "uvicorn>=0.35.0",
    "vine>=5.1.0",
]
